--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Run Docker build
-      id: get_version
-      run: docker build -f test-docker/Dockerfile ./test-docker
+#     - name: Run Docker build
+#       id: get_version
+#       run: docker build -f test-docker/Dockerfile ./test-docker
+    - name: Test bash to lower
+      id: test_bash
+      run: mytest=srTfDFG-FD echo "${mytest,,}"
