--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -3,25 +3,42 @@ on:
   push:
     branches:
     - '*'
+
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  base-image:
+    runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@master
-#     - name: Run Docker build
-#       id: get_version
-#       run: docker build -f test-docker/Dockerfile ./test-docker
-    - name: Test echo
-      id: test_echo
-      run: echo "Hello"
-    - name: Test echo of secret into file
-      run: |
-        echo "texts"
-      env:
-        FINGERPRINT: ${{secrets.RANDOM_KEY}} 
-    - name: demo
-      id: demo_it
-      run: REPO=$( echo "${{ github.repository }}" | echo $(awk '{print tolower($0)}') )
-    - name: Test bash to lower
-      id: test_bash
-      run: echo "${REPO,,}"; 
+      - name: Get file changes
+        id: file_changes
+        uses: trilom/file-changes-action@v1.2.3
+        with:
+          output: ','
+          fileOutput: ','
+      - name: changed_renv
+        run: |
+          MODIFIED=$(grep renv.lock $HOME/files_modified.csv)
+          echo ::set-output name=RENV_MODIFIED::$MODIFIED
+      - name: Test
+        run: echo ${{RENV_MODIFIED}}
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@master
+# #     - name: Run Docker build
+# #       id: get_version
+# #       run: docker build -f test-docker/Dockerfile ./test-docker
+#     - name: Test echo
+#       id: test_echo
+#       run: echo "Hello"
+#     - name: Test echo of secret into file
+#       run: |
+#         echo "texts"
+#       env:
+#         FINGERPRINT: ${{secrets.RANDOM_KEY}} 
+#     - name: demo
+#       id: demo_it
+#       run: REPO=$( echo "${{ github.repository }}" | echo $(awk '{print tolower($0)}') )
+#     - name: Test bash to lower
+#       id: test_bash
+#       run: echo "${REPO,,}"; 
