--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           output: ','
           fileOutput: ','
+      - name: testHome
+        run: echo $HOME
       - name: test
         run: grep renv.lock $HOME/files_modified.csv
       - name: changed_renv
