--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -18,6 +18,8 @@ jobs:
         run: echo $HOME
       - name: testlsHome
         run: ls $HOME
+      - name: testcsv
+        run: cat $HOME/files_modified.csv
       - name: test
         run: grep renv.lock $HOME/files_modified.csv
       - name: changed_renv
