--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -22,6 +22,12 @@ jobs:
         run: cat $HOME/files_modified.csv
       - name: test
         run: grep yml $HOME/files_modified.csv
+      - name: changed_yml
+        run: |
+          MODIFIED=$(grep yml $HOME/files_modified.csv)
+          echo ::set-output name=RENV_MODIFIED::$MODIFIED
+      - name: Testyml
+        run: echo ${{steps.changed_yml.outputs.RENV_MODIFIED}}
       - name: changed_renv
         run: |
           MODIFIED=$(grep renv.lock $HOME/files_modified.csv)
