--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -17,7 +17,7 @@ jobs:
       - name: changed_yml
         id: changed_yml
         run: |
-          if grep yml $HOME/files_modified.csv; then
+          if grep renv.lock $HOME/files_modified.csv; then
             MODIFIED=$(grep renv.lock $HOME/files_modified.csv)
           else
             MODIFIED="nope"
