--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -3,32 +3,40 @@ on:
   push:
     branches:
     - '*'
-
 jobs:
-  base-image:
+  user_check:
     runs-on: ubuntu-18.04
+    container: jonnylaw/nicdblog:latest
     steps:
-      - name: Get file changes
-        id: file_changes
-        uses: trilom/file-changes-action@v1.2.3
-        with:
-          output: ','
-          fileOutput: ','
-      - name: changed_yml
-        id: changed_yml
-        run: |
-          if grep renv.lock $HOME/files_modified.csv; then
-            MODIFIED=$(grep renv.lock $HOME/files_modified.csv)
-          else
-            MODIFIED="nope"
-          fi
+      - name: who
+        run: whoami
+    
+
+# jobs:
+#   base-image:
+#     runs-on: ubuntu-18.04
+#     steps:
+#       - name: Get file changes
+#         id: file_changes
+#         uses: trilom/file-changes-action@v1.2.3
+#         with:
+#           output: ','
+#           fileOutput: ','
+#       - name: changed_yml
+#         id: changed_yml
+#         run: |
+#           if grep renv.lock $HOME/files_modified.csv; then
+#             MODIFIED=$(grep renv.lock $HOME/files_modified.csv)
+#           else
+#             MODIFIED="nope"
+#           fi
           
-          echo ::set-output name=RENV_MODIFIED::$MODIFIED
-      - name: Testyml
-        run: echo ${{steps.changed_yml.outputs.RENV_MODIFIED}}
-      - name: TestId
-        if: contains(steps.changed_yml.outputs.RENV_MODIFIED, 'renv.lock')
-        run: echo "yeysyeysyeys"
+#           echo ::set-output name=RENV_MODIFIED::$MODIFIED
+#       - name: Testyml
+#         run: echo ${{steps.changed_yml.outputs.RENV_MODIFIED}}
+#       - name: TestId
+#         if: contains(steps.changed_yml.outputs.RENV_MODIFIED, 'renv.lock')
+#         run: echo "yeysyeysyeys"
 # jobs:
 #   build:
 #     runs-on: ubuntu-latest
