--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -16,6 +16,8 @@ jobs:
         run: whoami
       - name: copy renv
         run: cp -r /usr/local/app/renv .
+      - name: ls renv
+        run: ls -lah renv/library/r-4.0/x86_64-pc-linux-gnu/
       - name: installed_packages
         run: Rscript -e "installed.packages()"
       - name: import_blogdown 
