--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -4,26 +4,31 @@ on:
     branches:
     - '*'
 jobs:
-  user_check:
-    runs-on: ubuntu-18.04
-    container: jonnylaw/nicdblog:latest
-    steps:
-      - name: pwd
-        run: pwd
-      - name: ls
-        run: ls -a
-      - name: who
-        run: whoami
-      - name: copy renv
-        run: cp -r /usr/local/app/renv .
-      - name: copy rprof
-        run: cp /usr/local/app/.Rprofile .
-      - name: ls renv
-        run: ls -lah renv/library/R-4.0/x86_64-pc-linux-gnu/
-      - name: installed_packages
-        run: Rscript -e "installed.packages()"
-      - name: import_blogdown 
-        run: Rscript -e "library(blogdown)"
+    test-envs:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Echo a thing
+          run: echo ${GITHUB_REF_SLUG}
+#   user_check:
+#     runs-on: ubuntu-18.04
+#     container: jonnylaw/nicdblog:latest
+#     steps:
+#       - name: pwd
+#         run: pwd
+#       - name: ls
+#         run: ls -a
+#       - name: who
+#         run: whoami
+#       - name: copy renv
+#         run: cp -r /usr/local/app/renv .
+#       - name: copy rprof
+#         run: cp /usr/local/app/.Rprofile .
+#       - name: ls renv
+#         run: ls -lah renv/library/R-4.0/x86_64-pc-linux-gnu/
+#       - name: installed_packages
+#         run: Rscript -e "installed.packages()"
+#       - name: import_blogdown 
+#         run: Rscript -e "library(blogdown)"
     
 
 # jobs:
